bug in line 97 codegenerator mojo